--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+    <link rel="stylesheet" href="/static/style.css">
+</head>
+
 <h2>School Diary Login</h2>
 <form method="POST">
     <input name="username" placeholder="Username" required><br>
@@ -5,3 +12,4 @@
     <button type="submit">Login</button>
 </form>
 <a href="/register">Register</a>
+</html>
