--- a/templates/student_dashboard.html
+++ b/templates/student_dashboard.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+    <link rel="stylesheet" href="/static/style.css">
+</head>
+
 <h2>Student Diary</h2>
 <a href="/logout">Logout</a>
 
@@ -6,3 +13,4 @@
     <li>{{ entry.content }}</li>
 {% endfor %}
 </ul>
+</html>
