--- a/templates/teacher_dashboard.html
+++ b/templates/teacher_dashboard.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+    <link rel="stylesheet" href="/static/style.css">
+</head>
+
 <h2>Teacher Dashboard</h2>
 <a href="/logout">Logout</a>
 
@@ -10,3 +17,4 @@
     </li>
 {% endfor %}
 </ul>
+</html>
