--- a/templates/add_entry.html
+++ b/templates/add_entry.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+    <link rel="stylesheet" href="/static/style.css">
+</head>
+
 <h2>Add Entry for {{ student.username }}</h2>
 <form method="POST">
     <textarea name="content" required></textarea><br>
     <button type="submit">Save Entry</button>
 </form>
+</html>
