--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+    <link rel="stylesheet" href="/static/style.css">
+</head>
+
 <h2>Register</h2>
 <form method="POST">
     <input name="username" placeholder="Username" required><br>
@@ -10,3 +17,5 @@
 
     <button type="submit">Register</button>
 </form>
+<a href="/">Login</a>
+</html>
